hphp/hack/test/typecheck/classname/array_literal_bad.php.exp
File "array_literal_bad.php", line 10, characters 3-15:
  dict<string, (classname<exact C1> | classname<exact C2> | classname<exact D>)>
File "array_literal_bad.php", line 11, characters 10-13:
Invalid return type (Typing[4110])
  File "array_literal_bad.php", line 8, characters 53-53:
  Expected `I`
  File "array_literal_bad.php", line 6, characters 7-7:
  But got `D`; implicitly defined constant `::class` is a string that contains the fully qualified name of `D`
  File "array_literal_bad.php", line 9, characters 45-45:
    where the class `D` was referenced here
